# bevy-floating-dutchman

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: display_config.ron
assets/prefabs/: chase_enemy.ron  pirate_ship.ron
src/: damage.rs  despawn.rs  events.rs  labels.rs  main.rs  schedule.rs  setup.rs
src/collision/: boundary.rs  collision_detection.rs  mod.rs
src/components/: enemy.rs  follow.rs  health.rs  mod.rs  motion.rs  player.rs  score.rs  shoot.rs  track.rs  weapon.rs
src/entities/: boundary.rs  enemy.rs  mod.rs  motion.rs  player.rs  projectile.rs
src/labels/: events.rs  mod.rs  sets.rs  states.rs
src/menus/: mod.rs  pause.rs
src/movement/: follow.rs  force.rs  mod.rs  track.rs
src/player/: create.rs  mod.rs  score.rs  ship.rs  ui.rs
src/plugins/: asset_loading.rs  collision.rs  input.rs  main_ship_gameplay.rs  mod.rs  physics.rs  setup.rs  simulation.rs
src/resources/: assets.rs  game.rs  mod.rs
src/systems/: boundary.rs  collision.rs  death.rs  debug.rs  enemy.rs  handle_death.rs  mod.rs  movement.rs  player.rs  player_movement.rs  projectile.rs  score.rs  setup.rs
src/systems/ui/: mod.rs  player.rs
src/ui/: mod.rs  player.rs
src/weapon/: mod.rs  projectile.rs  shoot.rs
