[package]
name = "the-floating-dutchman"
version = "0.1.0"
authors = ["Kayton Fletcher <kayton@fastmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" #

[dependencies]
bevy = { version = "0.11.0" }
bevy_rapier2d = "0.22.0"
bevy_asset_loader = "0.17" 
nalgebra = { version = "0.25", features = [ "convert-glam" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
